--- a/src/components/navbar/mobileDocSidebarContent.module.css
+++ b/src/components/navbar/mobileDocSidebarContent.module.css
@@ -31,25 +31,27 @@
   
   .mobileDocSidebarBottomLinks {
     padding: 1rem;
-    border-top: 1px solid var(--ifm-color-emphasis-300);
+    border-top: 1px solid var(--border-default);
     flex-shrink: 0; /* Don't shrink this section */
   }
   
   .bottomLinkItem {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0.75rem 0.5rem;
-    margin-bottom: 0.25rem;
-    cursor: pointer;
-    border-radius: var(--ifm-global-radius);
-    text-decoration: none;
-    color: var(--ifm-font-color-base);
+      display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 6px;
+  border-radius: 4px;
+  font-weight: 400;
+  font-size: 13px;
+  color: var(--text-secondary);
+  cursor: pointer;
+  text-decoration: none;
+  transition: background-color 0.15s ease-in-out, color 0.15s ease-in-out;
   }
   
   .bottomLinkItem:hover {
-    background-color: var(--ifm-hover-overlay);
-    color: var(--ifm-link-hover-color);
+     color: var(--text-primary);
+
   }
   
   .bottomLinkItem svg {
