--- a/src/components/navbar/mobileIntegration.module.css
+++ b/src/components/navbar/mobileIntegration.module.css
@@ -14,6 +14,11 @@
 /* NEW class for padding the content of each section */
 .paddedSectionContent {
     padding: 16px; /* The main padding for section content is now here */
+    border-bottom: 1px solid var(--border-default);
+}
+.paddedSectionContentLast {
+    padding: 16px; /* The main padding for section content is now here */
+    /* border-bottom: 1px solid var(--border-default); */
 }
 
 
