Update the UI in inner Page.

--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -546,6 +546,10 @@ html[data-theme="dark"] .theme-toggle {
   }
 
   @media (max-width: 996px) {
+    .main-wrapper {
+  padding-top: 0px!important; /* Match navbar height */
+}
+
     .navbar {
       box-shadow: none;
       height: auto;
