--- a/src/theme/DocSidebar/Desktop/Content/styles.module.css
+++ b/src/theme/DocSidebar/Desktop/Content/styles.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: calc(88dvh - var(--ifm-navbar-height));
+  height: calc(90dvh - var(--ifm-navbar-height));
   background-color: var(--background-01);
 }
 .scrollableMenuArea {
@@ -19,7 +19,7 @@
   z-index: 10; /* Keep above scrolled content, but below dropdowns */
   display: flex;
   flex-direction: column;
-  gap: 0.5rem; /* Space between links */
+  /* gap: 0.5rem; Space between links */
 }
 
 .bottomLink {
