--- a/src/theme/Navbar/Search/styles.module.css
+++ b/src/theme/Navbar/Search/styles.module.css
@@ -50,7 +50,7 @@
     font-family: inherit;
     font-size: 0.75rem;
     color: #666666;
-    background-color: #f7f7f7;
+    background-color: #ffffff;
     border: 1px solid #eaeaea;
     border-radius: 6px;
     padding: 2px 6px;
