--- a/src/components/navbar/mobileDocSidebarContent.module.css
+++ b/src/components/navbar/mobileDocSidebarContent.module.css
@@ -42,7 +42,7 @@
   padding: 6px;
   border-radius: 4px;
   font-weight: 400;
-  font-size: 13px;
+  font-size: 14px;
   color: var(--text-secondary);
   cursor: pointer;
   text-decoration: none;
@@ -57,4 +57,6 @@
   .bottomLinkItem svg {
     margin-left: 8px;
     opacity: 0.7;
+    width: 20px;
+    height: 20px;
   }
