--- a/src/components/navbar/mobileIntegration.module.css
+++ b/src/components/navbar/mobileIntegration.module.css
@@ -13,17 +13,17 @@
 
 /* NEW class for padding the content of each section */
 .paddedSectionContent {
-    padding: 16px; /* The main padding for section content is now here */
+    padding: 16px;
     border-bottom: 1px solid var(--border-default);
 }
 .paddedSectionContentLast {
-    padding: 16px; /* The main padding for section content is now here */
+    padding: 16px;
     /* border-bottom: 1px solid var(--border-default); */
 }
 
 
 .sectionTitle {
-    font-size: 12px!important;
+    font-size: 13px!important;
     margin-bottom: 0.3rem; /* mb-4 */
     color: var(--text-primary);
 }
@@ -69,6 +69,8 @@
 } */
 .platformButton:hover {
     background-color: var(--border-default);
+    text-decoration: none;
+    color: var(--text-primary)!important;
   }
 
 .platformButton:focus {
