--- a/src/components/navbar/mobilePlatform.module.css
+++ b/src/components/navbar/mobilePlatform.module.css
@@ -29,7 +29,7 @@
 
 .gridContainer {
     display: grid;
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+    grid-template-columns: repeat(1, minmax(0, 1fr));
     gap: 0.5rem;
 }
 
@@ -85,7 +85,6 @@
     word-wrap: break-word;
     font-size: 0.8rem; /* ~12.8px */
     margin: 0;
-    /* line-height: 1.2; */ /* Example */
 }
 
 .cardDescription {
@@ -99,17 +98,13 @@
 }
 
 
-/* --- PlatformButton Styles (for Sample Apps) --- */
+
 .platformButton {
     display: flex;
     align-items: center;
-    padding: 0.7rem 0.6rem; /* This is relatively large padding for small buttons */
+    padding: 0.7rem 0.6rem;
     color: var(--text-primary);  
     text-decoration: none;
-    /* transition: background-color 0.15s ease, border-color 0.15s ease, box-shadow 0.15s ease; */
-    /* border-radius: 0.375rem; Added for consistency if desired */
-    /* border: 1px solid var(--border-dark); Example border, match your design */
-    /* background-color: var(--background-01); Example background */
 }
 
 .platformButton:hover {
@@ -118,8 +113,6 @@
 
 .platformButton:focus {
     outline: none;
-    /* box-shadow: 0 0 0 1px var(--integrate-button-focus-offset-color), 
-                0 0 0 3px var(--integrate-focus-ring);  */
 }
 
 /* iconContainer for PlatformButton */
